<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        ></EditTextPreference>

    <ListPreference
        android:key="@string/pref_temp_units_key"
        android:defaultValue="@string/pref_temp_units_celcius"
        android:title="@string/pref_temp_units_label"
        android:entries="@array/pref_temp_units_entries"
        android:entryValues="@array/pref_temp_units_entryValues"
        >
    </ListPreference>

</PreferenceScreen>